[package]
name = "sat-trajectory-fhe"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
bincode = "1.3"
base64 = "0.21"
sha2 = "0.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
